# Game-Menu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gamewindow.hpp  main.cpp  makefile
include/: character.hpp  entity.hpp  function.hpp  game.hpp  gamewindow.hpp  item.hpp  role.hpp  unique_id.hpp  utils.hpp
src/: character.cpp  entity.cpp  function.cpp  game.cpp  gamewindow.cpp  main.cpp  role.cpp  unique_id.cpp
